27.nov (ws)
      - more precise note stem position for different note head families
      - added "do re mi fa la ti" note head families
      - added arrowed accidentals from latest lilypond font
26.nov (ws)
      - add 128th flags from latest lilypond fonts
      (la)
      - add "make version" for windows build
      - plugin framework: move time and tick to cursor instead of measure
      - plugin framework: extend cursor to optionnally support repeats
25.nov (ws)
      - split screen fixes
      - refinement of session management
23.nov (lv)
      - MusicXML import/export of breath-mark
       (ws)
      - implemented horizontal and vertical split screen. This need some more
        testing...
22.nov (lv)
      - MusicXML import/export of arpeggio and glissando
21.nov (ws)
      - update session file after "save as"
      (db)
      - add handbook html, image, and font source files to SVN
20.nov  (ws)
        - fix import of capella whole measure rests
        (og)
        - exportly: tried to fix reported crash on file Cronicaz.mscz
        (la)
        - fix tiny text on windows if no printer installed
        - fix crash with drag and delete instrument name
        - fix rendering of dynamics (staff, part, system)
17.nov. (ws)
      - autosave: create dataPath if it does not exist
16.nov. (ws)
      - fix crash in autosave when autosave directory is not writable i.e. creating
        a temporary file failed; more work has to be done on this to notify the
        user about this condition
      (lv)
      - more work on MusicXML <metronome>
      (db)
      - change default foreground color to white
      - turn auto-save on for "factory settings"
      - better error message for SoundFont load failure
15.nov. (la)
      - fix "can't add dot to rest outside note entry"
      - fix bar line cut crash
      - forbid dots on full measure rest and avoid crash
      - enhance break plugin
14.nov. (ws)
      - delete barline reverts type to normal
13.nov. (ws)