@@ -1,3 +1,5 @@
+28.nov (lv)
+      - MusicXML import/export of grace notes
 27.nov (ws)
       - more precise note stem position for different note head families
       - added "do re mi fa la ti" note head families
